2002-06-25  Mark McLoughlin  <mark@skynet.ie>

	* src/themes/Crux/active-border-top-left-border.png:
	* src/themes/Crux/active-border-top-right-border.png:
	* src/themes/Crux/active-top-left-corner.png:
	* src/themes/Crux/active-top-mid-left-border.png:
	* src/themes/Crux/active-top-mid-right-border.png:
	* src/themes/Crux/active-top-right-corner.png:
	* src/themes/Crux/inactive-border-top-left-border.png:
	* src/themes/Crux/inactive-border-top-right-border.png:
	* src/themes/Crux/inactive-top-left-corner.png:
	* src/themes/Crux/inactive-top-mid-border.png:
	* src/themes/Crux/inactive-top-right-corner.png:
	* src/themes/Crux/metacity-theme-1.xml: added support
	for border only windows.

2002-06-24  James M. Cape  <jcape@ignore-your.tv>

	* src/themes/Esco/metacity-theme-1.xml: Added some stuff to
	the window buttons, so they use the ACTIVE bg/fg.

2002-06-25  Mark McLoughlin  <mark@skynet.ie>

	* src/display.[ch]: (meta_display_open):
	  src/screen.c: (set_supported_hint), (set_work_area_hint):
	Its _NET_WORKAREA, not _NET_WM_WORKAREA silly :-)

2002-06-25  Mark McLoughlin  <mark@skynet.ie>

	* src/screen.[ch]:
	(update_num_workspaces), recalc workarea hint when
	new workspaces created. Fixes bug that workarea
	not calculated until first non-dock window is
	mapped.
	(set_work_area_hint), (set_work_area_idle_func),
	(meta_screen_queue_workarea_recalc): move all this
	stuff from workspace.c.

	* src/workspace.c: (meta_workspace_invalidate_work_area):
	use meta_screen_queue_workarea_recalc.

2002-06-23  Gediminas Paulauskas <menesis@delfi.lt>

	* src/themes/Bright/metacity-theme-1.xml: Update with border-only
	window stuff from Atlanta.

2002-06-22  James M. Cape  <jcape@ignore-your.tv>

	* src/themes/Esco/metacity-theme-1.xml: Update for "border"
	frame stuff, minor button/spacing improvements.

2002-06-22  Havoc Pennington  <hp@pobox.com>

	Partially fix Jacob's SM bugs.
	
	* src/window.c (meta_window_apply_session_info): restore the extra